<?xml version="1.0" encoding="UTF-8"?>
<project
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fr.olympa</groupId>
	<artifactId>olympa-core</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<repositories>
		<repository>
			<id>papermc-releases</id>
			<url>https://papermc.io/repo/repository/maven-releases/</url>
		</repository>
		<repository>
			<id>viaversion-repo</id>
			<url>https://repo.viaversion.com</url>
		</repository>
		<repository>
			<id>papermc</id>
			<url>https://papermc.io/repo/repository/maven-public/</url>
		</repository>
		<repository>
			<id>minecraft-repo</id>
			<url>https://libraries.minecraft.net/</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
			<snapshots>
				<enabled>false</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>daily</updatePolicy>
			</releases>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>com.github.ProtocolSupport</groupId>
			<artifactId>ProtocolSupport</artifactId>
			<version>9221cc31d5</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>me.lucko</groupId>
			<artifactId>commodore</artifactId>
			<version>1.9</version>
		</dependency>
		<dependency>
			<groupId>us.myles</groupId>
			<artifactId>viaversion</artifactId>
			<version>3.2.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>redis.clients</groupId>
			<artifactId>jedis</artifactId>
			<version>3.3.0</version>
		</dependency>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot</artifactId>
			<version>1.16.4-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>io.github.waterfallmc</groupId>
			<artifactId>waterfall-api</artifactId>
			<version>1.16-R0.4-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>io.github.waterfallmc</groupId>
			<artifactId>waterfall-protocol</artifactId>
			<version>1.16-R0.4-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.destroystokyo.paper</groupId>
			<artifactId>paper-api</artifactId>
			<version>1.16.4-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.ricecode</groupId>
			<artifactId>string-similarity</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.mariadb.jdbc</groupId>
			<artifactId>mariadb-java-client</artifactId>
			<version>2.6.2</version>
		</dependency>
		<dependency>
			<groupId>fr.olympa</groupId>
			<artifactId>olympa-api</artifactId>
			<version>[0.0.1-SNAPSHOT,)</version>
			<scope>compile</scope>
		</dependency>
	</dependencies>
	<build>
		<defaultGoal>clean package</defaultGoal>
		<sourceDirectory>${basedir}/src/java/</sourceDirectory>
		<resources>
			<resource>
				<directory>src/resources</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.1</version>
				<configuration>
					<minimizeJar>false</minimizeJar>
					<filters>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>META-INF/</exclude>
							</excludes>
						</filter>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>Version.java.template</exclude>
							</excludes>
						</filter>
						<filter>
							<artifact>mariadb</artifact>
							<includes>
								<include>**</include>
							</includes>
						</filter>
					</filters>
					<finalName>OlympaCore</finalName>
					<outputDirectory>target</outputDirectory>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.debug>true</maven.compiler.debug>
		<maven.compiler.debuglevel>lines,vars,source</maven.compiler.debuglevel>
		<argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
		<failOnMissingWebXml>false</failOnMissingWebXml>
		<mainClass>x.Main</mainClass>
	</properties>
</project>